--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
 </nav></header>
 <main class="main">
   <h1>Contact</h1>
-  <p>Email: you@domain.com</p>
+  <p>Email: linhnguyenlethuy1611@gmail.com</p>
+  <p>Linkedin: https://www.linkedin.com/in/le-thuy-linh-nguyen/</p>
 </main>
 <footer class="footer">© 2025</footer></body></html>
