--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   <a href="/contact.html">Contact</a>
 </nav></header>
 <main class="main">
-  <h1>Xin chào</h1>
-  <p>Mô tả ngắn.</p>
-  <img src="assets/img/avatar.jpg" alt="avatar" class="avatar">
+  <h1>Bonjour, je m'appelle Linh</h1>
+  <p>Je suis data scientist polyvalente, spécialisée en analyse et traitement de données géospatiales.
+J’utilise Python, QGIS, des outils de visualisation et des approches de machine learning pour transformer des données complexes en informations utiles à la décision publique et au développement durable.
+Curieuse et toujours en apprentissage, j’aime explorer de nouveaux domaines de la data — de l’automatisation à la modélisation prédictive — et contribuer à des projets qui relient données, territoire et innovation.</p>
+  <img src="assets/img/IMG_3915.jpg" alt="avatar" class="avatar">
   <h2>Nổi bật</h2>
   <div class="grid">
-    <div class="card"><h3>Dự án A</h3><p>Mô tả.</p><p><a href="/projects.html#A">Xem →</a></p></div>
-    <div class="card"><h3>Dự án B</h3><p>Mô tả.</p></div>
+    <div class="card"><h3>Projet 1</h3><p>Mô tả.</p><p><a href="/projects.html#A">Xem →</a></p></div>
+    <div class="card"><h3>Projet 2</h3><p>Mô tả.</p></div>
   </div>
 </main>
 <footer class="footer">© 2025 · <a href="https://github.com/linhnguyenlethuy1611">GitHub</a></footer>
