--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>Je suis data scientist polyvalente, spécialisée en analyse et traitement de données géospatiales.
 J’utilise Python, QGIS, des outils de visualisation et des approches de machine learning pour transformer des données complexes en informations utiles à la décision publique et au développement durable.
 Curieuse et toujours en apprentissage, j’aime explorer de nouveaux domaines de la data — de l’automatisation à la modélisation prédictive — et contribuer à des projets qui relient données, territoire et innovation.</p>
-  <img src="assets/IMG_3915.jpg" alt="IMG_3915.jpg" class="avatar" width="160" height="160">
+  <img src="assets/IMG_3915.jpg" alt="IMG_3915" class="avatar" width="160" height="160" loading="lazy" decoding="async">
   <h2>Nổi bật</h2>
   <div class="grid">
     <div class="card"><h3>Projet 1</h3><p>Mô tả.</p><p><a href="/projects.html#A">Xem →</a></p></div>
